--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="descrption" content="esta pagina lo que permite es estudiar de forma digital, usando los libros del Colegio Las Victorias para facilitar la elaboracion de trabajos"/>
 <meta name="author" content="Maximo Dearte"/>
 <meta name="keywords" content="libros de Las Victorias, libros de las Victorias, Maximo Dearte "/>
-<link rel="stylesheet" href="main.css">
+<link  href="main.css" rel="stylesheet"/>
 </head>
    <body>
     <div>
